# sudoku-solver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  build_debug.sh  conanfile.py  digit_recognition.cpp  digit_recognition.hpp  main.cpp  pyproject.toml  sudoku_detection.cpp  sudoku_detection.hpp  svhn.py  test_digit_recognition.cpp  test_sudoku_detection.cpp  test_sudoku_solver.cpp
scripts/: digit_recognition_model.py
src/: digit_recognition.cpp  grid_extraction.cpp  grid_extraction.hpp  sudoku_solver.cpp  sudoku_solver.hpp
tests/: test_grid_extraction.cpp
